<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>com.gmail.stefvanschiedev</groupId>
        <artifactId>buildinggame</artifactId>
        <version>12.6.0</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <artifactId>buildinggame-impl</artifactId>

    <properties>
        <maven.compiler.release>17</maven.compiler.release>
    </properties>

    <repositories>
        <repository>
            <id>vault-repo</id>
            <url>https://nexus.hc.to/content/repositories/pub_releases</url>
        </repository>
        <repository>
            <id>placeholderapi</id>
            <url>https://repo.extendedclip.com/content/repositories/placeholderapi/</url>
        </repository>
        <repository>
            <id>worldedit-core</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <id>CodeMC</id>
            <url>https://repo.codemc.org/repository/maven-public</url>
        </repository>
        <repository>
            <id>aikar</id>
            <url>https://repo.aikar.co/content/groups/aikar/</url>
        </repository>
        <repository>
            <id>filoghost-repo</id>
            <url>https://ci.filoghost.me/plugin/repository/everything/</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>mojang-repo</id>
            <url>https://libraries.minecraft.net/</url>
        </repository>
        <repository>
            <id>citizens</id>
            <url>https://repo.citizensnpcs.co/</url>
        </repository>
    </repositories>

    <dependencies>
        <dependency>
            <groupId>com.gmail.stefvanschiedev</groupId>
            <artifactId>abstraction</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gmail.stefvanschiedev</groupId>
            <artifactId>1_19_0</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gmail.stefvanschiedev</groupId>
            <artifactId>1_19_1</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gmail.stefvanschiedev</groupId>
            <artifactId>1_19_2</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gmail.stefvanschiedev</groupId>
            <artifactId>1_19_3</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gmail.stefvanschiedev</groupId>
            <artifactId>1_19_4</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gmail.stefvanschiedev</groupId>
            <artifactId>1_20_0-1</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gmail.stefvanschiedev</groupId>
            <artifactId>1_20_2</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gmail.stefvanschiedev</groupId>
            <artifactId>1_20_3</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gmail.stefvanschiedev</groupId>
            <artifactId>1_20_4</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gmail.stefvanschiedev</groupId>
            <artifactId>1_20_5</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gmail.stefvanschiedev</groupId>
            <artifactId>1_20_6</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>com.gmail.stefvanschiedev</groupId>
            <artifactId>1_21</artifactId>
            <version>${project.version}</version>
        </dependency>
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.20.5-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.mojang</groupId>
            <artifactId>authlib</artifactId>
            <version>1.11</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.milkbowl.vault</groupId>
            <artifactId>VaultAPI</artifactId>
            <version>1.7</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.jhg023</groupId>
            <artifactId>SimpleNet</artifactId>
            <version>1.6.6</version>
        </dependency>
        <dependency>
            <groupId>me.clip</groupId>
            <artifactId>placeholderapi</artifactId>
            <version>2.11.5</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-core</artifactId>
            <version>7.2.17</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.3.6</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.zaxxer</groupId>
            <artifactId>HikariCP</artifactId>
            <version>5.0.1</version>
        </dependency>
        <dependency>
            <groupId>org.bstats</groupId>
            <artifactId>bstats-bukkit-lite</artifactId>
            <version>1.8</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>co.aikar</groupId>
            <artifactId>acf-bukkit</artifactId>
            <version>0.5.1-SNAPSHOT</version>
        </dependency>
        <dependency>
            <groupId>com.github.stefvanschie.inventoryframework</groupId>
            <artifactId>IF</artifactId>
            <version>0.10.14</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>5.11.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.gmail.filoghost.holographicdisplays</groupId>
            <artifactId>holographicdisplays-api</artifactId>
            <version>2.4.9</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.citizensnpcs</groupId>
            <artifactId>citizens-main</artifactId>
            <version>2.0.24-SNAPSHOT</version>
            <type>jar</type>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>text-api</artifactId>
            <version>3.0.4</version>
        </dependency>
        <dependency>
            <groupId>net.kyori</groupId>
            <artifactId>text-adapter-bukkit</artifactId>
            <version>3.0.6</version>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>true</filtering>
                <includes>
                    <include>plugin.yml</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
                <filtering>false</filtering>
                <excludes>
                    <exclude>plugin.yml</exclude>
                </excludes>
            </resource>
        </resources>

        <plugins>
            <plugin>
                <version>3.13.0</version>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <target>1.11</target>
                    <source>1.11</source>
                    <compilerArgs>
                        <arg>-parameters</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <!--Relocation is crucial due to possible different api versions in plugin.yml files-->
                <configuration>
                    <relocations>
                        <relocation>
                            <pattern>org.bstats</pattern>
                            <shadedPattern>com.gmail.stefvanschiedev.buildinggame.utils</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>co.aikar.commands</pattern>
                            <shadedPattern>com.gmail.stefvanschiedev.buildinggame.acf</shadedPattern>
                        </relocation>
                        <relocation>
                            <pattern>com.github.stefvanschie.inventoryframework</pattern>
                            <shadedPattern>com.gmail.stefvanschiedev.buildinggame.inventoryframework</shadedPattern>
                        </relocation>
                    </relocations>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <argLine>--illegal-access=permit</argLine>
                </configuration>
                <dependencies>
                    <dependency>
                        <groupId>org.junit.jupiter</groupId>
                        <artifactId>junit-jupiter-engine</artifactId>
                        <version>5.10.0</version>
                    </dependency>
                </dependencies>
            </plugin>
        </plugins>
    </build>
</project>